# llm-guardrail-image-processor

./: .gitignore  AGENT_PRD_PROMPT.md  CLAUDE.md  Dockerfile  ImageGuard_PRD_v0.2.md  ImageGuard_Project_Documentation.md  ImageGuard_phases1-3_PRD.md  PROJECT_PROGRESS.md  README.md  SECURITY_REVIEW.md  config.yaml  imageguard-cli  patterns.yaml  pyproject.toml  requirements.txt
.github/workflows/: security.yml
data/: calibration.json  frequency_baseline.json
imageguard/: __init__.py  __main__.py  analyzer.py  api.py  calibration.py  cli.py  config.py  frequency.py  hidden_text.py  overlays.py  patterns.py  preprocess.py  scoring.py  steganography.py  structural.py  text_analysis.py
imageguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
k8s/: deployment.yaml  service.yaml
scripts/: calibrate_confidence.py  calibrate_weights.py  load_test.py
tests/: __init__.py  phase1_test_plan.md  phase2_test_plan.md  phase3_test_plan.md  phase4_test_plan.md  phase5_test_plan.md  test_new_features.py  test_phase1_text_pipeline.py  test_phase2_hidden_text.py  test_phase3_frequency_analysis.py  test_phase4_steganography.py  test_phase5_structural.py  utils.py
