[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imageguard"
version = "0.2.0"
description = "LLM-free guardrail detecting prompt injection in images via classical CV"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Raul & Mark"}
]
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "numpy>=1.24.0",
    "pywavelets>=1.4.0",
    "pyzbar>=0.1.9",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "prometheus-client>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
imageguard = "imageguard.cli:main"

[project.urls]
Repository = "https://github.com/your-repo/imageguard"

[tool.setuptools.packages.find]
where = ["."]
include = ["imageguard*"]
